--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Tudo sobre Git </title>
+  <link rel="stylesheet" href="/style.css"/>
+  <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Open Sans"
+  />
+  <style>
+    header {  font-family: 'Open Sans'}
+    head { font-family: 'Open Sans'}
+    body { font-family: 'Open Sans'}
+  </style>
 </head>
 <body>
 
