--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </li>
   <br>
   <li>
-    Mudar nome da branch: git initgit config --global
+    Mudar nome da branch: git config --global
     init.defaultBranch main
     <br>
     <br>
